--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 22:27+0300\n"
+"POT-Creation-Date: 2025-04-25 22:37+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -385,8 +385,8 @@ msgstr "Пользователь успешно изменен"
 #: task_manager/users/views.py:65
 msgid ""
 "You do not have permission \n"
-"                                      to delete another user."
-msgstr "У вас нет прав для удаления другого пользователя."
+"                                      to modify another user."
+msgstr "У вас нет прав для изменения другого пользователя."
 
 #: task_manager/users/views.py:73
 msgid ""
